fix terms of service alignment and wording
fixes COMMS-251

Test Plan:
- Jenkins passes
- change custom terms
- with passive terms turned off
  relogin.
- notice the links are aligned and the wording
  changed

Reviewed-on: https://gerrit.instructure.com/131817
Tested-by: Jenkins
Product-Review: Steven Burnett <sburnett@instructure.com>
QA-Review: Steven Burnett <sburnett@instructure.com>

--- a/app/stylesheets/pages/login/_ic-login.scss
+++ b/app/stylesheets/pages/login/_ic-login.scss
@@ -374,6 +374,11 @@ body.body--login-confirmation {
   background: $ic-color-light;
   border-bottom-left-radius: $baseBorderRadius;
   border-bottom-right-radius: $baseBorderRadius;
+
+  .terms_of_service_link {
+    position: relative;
+    top: -2px; //make the link show on the same alignment as the paragraph
+  }
 }
 
 .ic-Login-confirmation__auth-icon {
